--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Static KADRA</title>
   </head>
   <body>
-    <h1>ALLO KADRA</h1>
+    <h1>KADRA ROSEMIN</h1>
 
     <strong>KADRA </strong>
     <img src="LADRA/kadra.jpeg" />
